--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/media.css">
@@ -68,6 +69,17 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footerContent">
+          <p>&copy; 2023 Code by Arcanjo. Todos os direitos reservados.</p>
+          <div class="socialMedia">
+            <a href="https://www.instagram.com/codebyarcanjo/" target="_blank"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.facebook.com/Sr.Arcanjo.Manoel" target="_blank"><i class='bx bxl-facebook-circle' ></i></a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
+
